Cumulative Layout Shift is fixed for the DisplayImage component.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -61,3 +61,14 @@
 	top: 0;
 	right: 0;
 }
+
+.image__container {
+	box-sizing: content-box;
+	padding: 4rem 0;
+	display: flex;
+	justify-content: space-evenly;
+	height: 15rem;
+}
+
+.image__container img {
+}
